Translation to RU

--- a/src/ru/rsreu/tyart/alienexplorer/res/values/strings.properties
+++ b/src/ru/rsreu/tyart/alienexplorer/res/values/strings.properties
@@ -1,1 +1,18 @@
-test = Test.
+app_name = Alien Explorer
+
+game_paused = GAME PAUSED
+level = Level
+you_win = YOU WIN!
+you_lose = YOU LOSE...
+
+start_a_new_game = Start a new game?
+new_game = New game
+close_game = Close game?
+exit = Exit
+choose_level = Choose level
+resume = Resume
+back_to_main_menu = Back to main menu
+restart = Restart
+next_level = Next level
+ok = OK
+cancel = Cancel
